force-app/main/default/objects/Related_Contract__c/Related_Contract__c.object-meta.xml
<CustomObject>
    <label>Related Organisation</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Organisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>