force-app/main/default/objects/Related_Contract__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>I_RS_Contract__r.I_RS_Contract_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement End Date</label>
    <type>Date</type>
</CustomField>