force-app/main/default/objects/Related_Contract__c/fields/I_RS_Contract__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contract__c</fullName>
    <label>Agreement</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Related Organisations</relationshipLabel>
    <relationshipName>Related_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>