force-app/main/default/objects/Related_Contract__c/fields/I_RS_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contract_Start_Date__c</fullName>
    <formula>I_RS_Contract__r.I_RS_Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>