force-app/main/default/objects/Related_Contract__c/fields/I_RS_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Agreements</relationshipLabel>
    <relationshipName>Related_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>