force-app/main/default/objects/Related_Contract__c/fields/I_RS_Parent_Contract__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_Contract__c</fullName>
    <formula>I_RS_Contract__r.I_RS_Contract__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Agreement</label>
    <type>Text</type>
</CustomField>