force-app/main/default/objects/Related_Contract__c/fields/L_PR_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Agreement_Status__c</fullName>
    <label>Agreement Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>