force-app/main/default/objects/Related_Contract__c/listViews/All_Related_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Related_Contracts</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Project_Proposal__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Related Contracts</label>
</ListView>